--- a/Views/userViews/signupOtp.ejs
+++ b/Views/userViews/signupOtp.ejs
@@ -41,7 +41,7 @@
 								<input type="text" class="form-control" id="otp" name="otp" placeholder="OTP" onfocus="this.placeholder = ''" onblur="this.placeholder = 'OTP'">
 							</div>
 							<div class="col-md-12 form-group">
-								{<% if (typeof message !== 'undefined') { %>
+								<% if (typeof message !== 'undefined') { %>
 								<center>
 								<div class="audun_warn">
 									<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
