--- a/Views/userViews/orders.ejs
+++ b/Views/userViews/orders.ejs
@@ -66,30 +66,6 @@
 	<!-- End Header Area -->
 
      <!--================ Order Card Area =================-->
-    <!-- {{!-- <section class="blog_area single-post-area section_gap">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 posts-list">
-                    <div class="comments-area" style="padding-bottom:30px;">
-                        <h4>Orders</h4>
-                        <div class="comment-list grid-item ">
-                            {{#each order}}
-                            <div class="single-comment justify-content-between d-flex">
-                                <div class="user justify-content-between d-flex">
-                                    <div class="desc">
-                                        <h5>Item : {{this.houseAddress}}</h5>
-                                        <h5>price : {{this.city}}</h5>
-                                        <h5>Status : {{this.street}}</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            {{/each}}
-                        </div>
-                    </div>
-                </div> 
-			</div>            
-        </div>
-    </section>  --}} -->
     <section class="blog_area single-post-area section_gap">
         <div class="container">
             <div class="row">
@@ -101,10 +77,10 @@
                             <div class="single-comment justify-content-between d-flex">
                                 <div class="user justify-content-between d-flex">
                                     <div class="desc col-lg-8">
-                                        <h5><span style="color: black;">Date:</span> <%= item.date %></h5>
-                                        <h5><span style="color: black;">Price ₹ :</span><%= item.totalPrice %></h5>
-                                        <h5><span style="color: black;">Status :</span> <%= item.paymentStatus %></h5>
-                                        <h5><span style="color: black;">Payment method: </span><%= item.paymentMethod %></h5>
+                                        <h5><span style="color: black;">Date:</span> <%= new Date(item.orders.createdAt).toLocaleDateString('en-US') %></h5>
+                                        <h5><span style="color: black;">Price ₹ :</span><%= item.orders.totalPrice %></h5>
+                                        <h5><span style="color: black;">Status :</span> <%= item.orders.paymentStatus %></h5>
+                                        <h5><span style="color: black;">Payment method: </span><%= item.orders.paymentMethod %></h5>
                                     </div>
                                     <div class="col-lg-4" style="margin-top:20px;">
                                         <a id="btn" href="/orderDetails?id=<%= item._id %>">SHOW DETAILS</a>
