--- a/Views/userViews/profile.ejs
+++ b/Views/userViews/profile.ejs
@@ -42,6 +42,244 @@
         }
 
 
+
+    
+.inside {
+  width: 100%;
+
+
+}
+
+/* .telephone {
+    margin: 50px auto;
+    position: relative;
+    background: #e0e5ec;
+    width: 220px;
+    height: 420px;
+    border-radius: 20px;
+    border: 6px solid rgba(0, 0, 0, 0.03);
+    display: -webkit-box;
+    box-shadow: 30px 30px 60px #c7c7c7b8, -30px -30px 60px #ffffff;
+} */
+      /* .top {
+        position: absolute;
+        top: 0;
+        right: 52px;
+        width: 100px;
+        height: 18px;
+        background: rgba(0, 0, 0, 0.03);
+        border-bottom-left-radius: 9px;
+        border-bottom-right-radius: 9px;
+    } */
+
+/* .top-elements i {
+    font-size: 12px;
+    color: #0000005c;
+    z-index: 50;
+    position: absolute;
+    right: 9px;
+    top: 4px;
+}
+
+.top-elements span {
+  position: absolute;
+  color: #0000005c;
+  top: 4px;
+  left: 16px;
+  font-size: 10px;
+} */
+
+/* .home {
+  right: 73px;
+  width: 60px;
+  height: 3px;
+  background: black;
+  border-radius: 20px;
+  bottom: 7px;
+  background: #0000005c;
+  position: absolute;
+} */
+
+.wallet-top {
+  margin-top: 30px;
+  text-align: center;
+  /* width: 100%; */
+  /* padding-left: 0px;/ */
+  margin-right: 30px;
+  margin-left: 40px;
+  margin-bottom: 50px;
+}
+
+/* .wallet-mid {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.wallet-mid .box {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.03);
+  border-radius: 6px;
+  color: #00000061;
+  box-shadow: 3px 2px 8px #adadadb0, -4px -5px 18px #ffffff;
+} */
+button {
+  border: 0;
+  transition: 0.3s;
+}
+
+/* .wallet-mid .box:hover {
+    color: #fda085 !important;
+}
+
+.wallet-mid .box p {
+  font-size: 10px;
+  margin-bottom: 0;
+  margin-top: 5px;
+} */
+
+h3 {
+  color: #00000061;
+  font-size: 13px;
+}
+
+/* .wallet-mid .box i {
+box-shadow: 0px 2px 2px #adadadb0, 0px -2px 2px #ffffff;
+  border-radius: 50px;
+}
+
+.wallet-mid .box:focus {
+  outline: none;
+box-shadow: inset 30px 30px 60px #adadad70, inset -30px -30px 60px #ffffff;
+}
+
+.wallet-mid .box:first-child {
+  margin-right: 10px;
+} */
+
+.card span {
+  position: absolute;
+  left: 6px;
+  bottom: 10px;
+  font-weight: 300;
+  font-size: 13px;
+  color: white;
+}
+
+.card h2 {
+  color: white;
+  font-weight: 300;
+}
+
+.card i {
+  position: absolute;
+  right: 6px;
+  bottom: 6px;
+  font-size: 22px;
+  color: white;
+}
+
+.wallet-top h1 {
+  color: #00000061;
+  font-size: 35px;
+}
+
+.wallet-top .card {
+  background-image: linear-gradient(189deg, #FF8700 23%, #151515 114%);
+  width: 100%;
+  height: 250px;
+  box-shadow: -2px 0px 25px 10px #272b32b0;
+;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px;
+  border-color: azure;
+  position: relative;
+  border: 0;
+
+}
+
+/* .checkbox .tag {
+  color: #595959;
+  display: block;
+  float: left;
+  font-weight: bold;
+  position: relative;
+  width: 120px;
+}
+
+.checkbox label {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  color: #00000061;
+  font-size: 14px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #d4d4d4;
+}
+.checkbox .input-assumpte {
+  display: none;
+} */
+/* .input-assumpte + label:after {
+box-shadow: 0px 2px 2px #adadadb0, 0px -2px 2px #ffffff;
+  background-color: #ffffff;
+  border-radius: 50px;
+  border: 1px solid #e6e6e6;
+  display: inline-block;
+  transition-duration: 0.3s;
+  width: 16px;
+  height: 16px;
+  content: '';
+  margin-left: 10px;
+}
+.input-assumpte:checked + label:after {
+  background-color: #fda085;
+} */
+/* 
+.bar {
+  width: 100%;
+  height: 5px;
+  border-radius: 15px;
+  background: #f3f3f300;
+    margin-left: 5px;
+    box-shadow: 1px 2px 3px #adadadb0, -3px -2px 5px #ffffffc7;
+} */
+
+/* .bar .bar-inside {
+  background: #fda085;
+  border-radius: 15px;
+  height: 100%;
+}
+
+.fuel .bar-inside {
+  width: 7%;
+}
+.cat .bar-inside {
+  width: 90%;
+}
+.food .bar-inside {
+  width: 55%;
+} */
+/* .spend i {
+  color: #00000061;
+}
+
+.spend {
+  margin-bottom: 10px;
+} */
+
+
+
+
     </style>
 </head>
 
@@ -59,16 +297,39 @@
                 <div class="col-lg-12">
                     <div class="blog_right_sidebar">
                         <aside class="single_sidebar_widget author_widget">
+                            
                             <article>
-                                <center>
-                                    <img class="author_img rounded-circle" src="img/userprofile.png" alt="">
-                                </center>
+                                <div class="row">
+                                    <div class="col-5" style="margin-left: 50px;">
+                                        <img class="author_img rounded-circle" src="img/userprofile.png" alt="">
+                               
                                 <div class="profile-info">
                                     <h1><%= user.fname %> <%= user.lname %></h1>
                                     <p><%= user.email %></p>
                                     <p>+91 <%= user.number %></p>
-                                    <p><span style="color: darkgoldenrod;">Wallet : </span>₹<%= user.wallet %></p>
+                                    <!-- <p><span style="color: darkgoldenrod;">Wallet : </span>₹<%= user.wallet %></p> -->
                                 </div>
+                                    </div>
+
+                                    <div class="col-6">
+                                        <div class="inside">
+           
+                                            <div class="wallet-top">
+                                               
+                                               <div class="card">
+                                                <h1>MY WALLET</h1>
+                                                   <h2>₹<%= user.wallet %></h2>
+                                                   <span><%= user.email %></span>
+                                               </div>
+                                            </div>
+                                            
+                                    </div>
+                                    </div>
+                                
+                                </div>
+                               
+                                    
+                               
                                 <br>
                                 <div class="col-xs-12">
                                     <div class="col-md-lg-6 posts">
@@ -133,6 +394,10 @@
             </div>
         </div>
     </section>
+
+
+
+
 
     <!--================Blog Area =================-->
 
