--- a/Views/adminViews/addCategory.ejs
+++ b/Views/adminViews/addCategory.ejs
@@ -13,7 +13,8 @@
       </nav>
     </div>
     <div class="row">
-      <div class="col-lg-8 grid-margin stretch-card">
+      <div class="col-lg-3"></div>
+      <div class="col-lg-6 grid-margin stretch-card">
         <div class="card">
           <div class="card-body">
             <h4 class="card-title">Enter the details of the new category</h4>
