--- a/Views/adminViews/addProduct.ejs
+++ b/Views/adminViews/addProduct.ejs
@@ -13,6 +13,7 @@
       </nav>
     </div>
     <div class="row">
+      <div class="col-lg-2"></div>
       <div class="col-8 grid-margin stretch-card">
         <div class="card">
           <div class="card-body">
