--- a/Views/layouts/adminHeader.ejs
+++ b/Views/layouts/adminHeader.ejs
@@ -78,6 +78,22 @@
                 <span class="menu-title">Order</span>
                 </a>
             </li>
+            <li class="nav-item menu-items">
+              <a class="nav-link" href="/admin/coupon">
+              <span class="menu-icon">
+                  <i class="mdi mdi-playlist-play"></i>
+              </span>
+              <span class="menu-title">Coupon</span>
+              </a>
+          </li>
+          <li class="nav-item menu-items">
+            <a class="nav-link" href="/admin/banner">
+            <span class="menu-icon">
+                <i class="mdi mdi-playlist-play"></i>
+            </span>
+            <span class="menu-title">Banner</span>
+            </a>
+        </li>
         </ul>
       </nav>
       <!-- partial -->
@@ -101,7 +117,8 @@
             </ul>
             <ul class="navbar-nav navbar-nav-right">
               <li class="nav-item dropdown d-none d-lg-block">
-                <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown" aria-expanded="false" href="/admin/logout">Logout</a>
+                <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown" aria-expanded="false" href="/admin/logout" >
+                  <i class="mdi mdi-logout-variant" ></i>Logout</a>
               </li> 
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
